--- a/idade.css
+++ b/idade.css
@@ -6,6 +6,9 @@
 body{
     background-color: pink;
 }
+h1{
+    font-size: 30px;
+}
 .box2{
     border: 2px solid color rgb(255, 255, 255);
     width: 600px;
